// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`friendship GET / filter friends for userId 1`] = `
{
  "data": {
    "data": [
      {
        "accepted": true,
        "type": "incoming",
        "user": {
          "firstName": "Tolber",
          "id": "37d28fdf-99bc-44b5-8df9-6a3b1a36f177",
          "lastName": "Ovcharenko",
          "lastOnlineAt": "2024-08-10T10:10:02Z",
          "nick": "tolber01",
          "online": true,
        },
      },
      {
        "accepted": true,
        "type": "incoming",
        "user": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
      },
    ],
    "totalCount": 2,
  },
  "ok": true,
}
`;

exports[`friendship GET / filter friends with limit 1`] = `
{
  "data": {
    "data": [
      {
        "accepted": true,
        "type": "incoming",
        "user": {
          "firstName": "Tolber",
          "id": "37d28fdf-99bc-44b5-8df9-6a3b1a36f177",
          "lastName": "Ovcharenko",
          "lastOnlineAt": "2024-08-10T10:10:02Z",
          "nick": "tolber01",
          "online": true,
        },
      },
    ],
    "next": "37d28fdf-99bc-44b5-8df9-6a3b1a36f177/2024-02-16T15:36:38Z",
    "totalCount": 2,
  },
  "ok": true,
}
`;

exports[`friendship GET / filter friends with limit 2`] = `
{
  "data": {
    "data": [
      {
        "accepted": true,
        "type": "incoming",
        "user": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
      },
    ],
    "totalCount": 2,
  },
  "ok": true,
}
`;

exports[`friendship GET / filter incoming pending requests 1`] = `
{
  "data": {
    "data": [
      {
        "accepted": false,
        "type": "incoming",
        "user": {
          "firstName": "Sasha",
          "id": "baa0e8bc-385f-4314-9580-29855aff2229",
          "lastName": "Provodnikov",
          "lastOnlineAt": "2024-08-10T10:10:02Z",
          "nick": "yyy",
          "online": true,
        },
      },
      {
        "accepted": false,
        "type": "incoming",
        "user": {
          "firstName": "Sanal",
          "id": "2db640fd-7aa4-4bba-8ee6-3935b700297a",
          "lastName": "Mandjiev",
          "lastOnlineAt": "2024-08-10T10:10:02Z",
          "nick": "sanal",
          "online": true,
        },
      },
    ],
    "totalCount": 2,
  },
  "ok": true,
}
`;

exports[`friendship GET / filter online friends 1`] = `
{
  "data": {
    "data": [
      {
        "accepted": true,
        "type": "incoming",
        "user": {
          "firstName": "Tolber",
          "id": "37d28fdf-99bc-44b5-8df9-6a3b1a36f177",
          "lastName": "Ovcharenko",
          "lastOnlineAt": "2024-08-10T10:10:02Z",
          "nick": "tolber01",
          "online": true,
        },
      },
    ],
    "totalCount": 1,
  },
  "ok": true,
}
`;

exports[`friendship GET / filter outcoming pending requests 1`] = `
{
  "data": {
    "data": [
      {
        "accepted": false,
        "type": "outcoming",
        "user": {
          "firstName": "Marina",
          "id": "48683858-796c-45ad-a361-9e3d6d003354",
          "lastName": "Graf",
          "lastOnlineAt": "2024-08-10T10:10:02Z",
          "nick": "mmm",
          "online": true,
        },
      },
    ],
    "totalCount": 1,
  },
  "ok": true,
}
`;

exports[`friendship POST /accept-request 1`] = `
{
  "data": {
    "accepted": true,
    "createdAt": "2024-02-16T15:36:38Z",
    "message": "test request",
    "requesterId": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
    "responderId": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
    "viewed": true,
  },
  "ok": true,
}
`;

exports[`friendship POST /deny-request 1`] = `
{
  "data": {
    "accepted": false,
    "createdAt": "2024-02-16T15:36:38Z",
    "message": "test request",
    "requesterId": "baa0e8bc-385f-4314-9580-29855aff2229",
    "responderId": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
    "viewed": true,
  },
  "ok": true,
}
`;

exports[`friendship POST /remove-friend 1`] = `
{
  "data": {
    "accepted": false,
    "createdAt": "2024-02-16T15:36:38Z",
    "message": "test",
    "requesterId": "2db640fd-7aa4-4bba-8ee6-3935b700297a",
    "responderId": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
    "viewed": true,
  },
  "ok": true,
}
`;

exports[`friendship POST /send-request 1`] = `
{
  "data": {
    "accepted": false,
    "createdAt": "2024-08-10T10:10:10Z",
    "message": "test add",
    "requesterId": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
    "responderId": "48683858-796c-45ad-a361-9e3d6d003354",
    "viewed": false,
  },
  "ok": true,
}
`;
